--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="playlist" id="playlist">
       <!-- Playlist items will be injected here -->
     </div>
-    <audio id="audio"></audio>
+    <audio id="audio" autoplay></audio>
   </div>
   <script src="script.js"></script>
 </body>
