--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
           <span id="duration">0:00</span>
         </div>
         <div class="controls">
-          <button id="prev"><i class="fa-solid fa-backward"></i></button>
-          <button id="play"><i class="fa-solid fa-play"></i></button>
-          <button id="next"><i class="fa-solid fa-forward"></i></button>
-          <button id="shuffle"><i class="fa-solid fa-shuffle"></i></button>
-          <button id="repeat"><i class="fa-solid fa-repeat"></i></button>
+          <button id="prev" title="Previous"><i class="fa-solid fa-backward"></i></button>
+          <button id="play" title="Play/Pause"><i class="fa-solid fa-play"></i></button>
+          <button id="next" title="Next"><i class="fa-solid fa-forward"></i></button>
+          <button id="shuffle" title="Shuffle"><i class="fa-solid fa-shuffle"></i></button>
+          <button id="repeat" title="Repeat"><i class="fa-solid fa-repeat"></i></button>
           <div class="volume-control-wrapper">
             <button id="mute"><i class="fa-solid fa-volume-up"></i></button>
             <div class="volume-bar-container">
-              <input type="range" id="volume-bar" min="0" max="1" step="0.01" value="1" orient="vertical">
+              <input type="range" id="volume-bar" min="0" max="1" step="0.01" value="0.5" orient="vertical">
             </div>
           </div>
           <button id="playlist-toggle"><i class="fa-solid fa-list"></i></button>
