--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Font Awesome for icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -19,29 +22,34 @@
           <span id="current-time">0:00</span>
           <div class="progress-bar-bg">
             <div class="progress-bar" id="progress-bar"></div>
+            <div class="progress-pointer" id="progress-pointer"></div>
           </div>
           <span id="duration">0:00</span>
         </div>
         <div class="controls">
-          <button id="prev" title="Previous"><i class="fa-solid fa-backward"></i></button>
-          <button id="play" title="Play/Pause"><i class="fa-solid fa-play"></i></button>
-          <button id="next" title="Next"><i class="fa-solid fa-forward"></i></button>
-          <button id="shuffle" title="Shuffle"><i class="fa-solid fa-shuffle"></i></button>
-          <button id="repeat" title="Repeat"><i class="fa-solid fa-repeat"></i></button>
-          <div class="volume-control-wrapper">
-            <button id="mute"><i class="fa-solid fa-volume-up"></i></button>
-            <div class="volume-bar-container">
-              <input type="range" id="volume-bar" min="0" max="1" step="0.01" value="0.5" orient="vertical">
-            </div>
+          <div class="controls-group main-controls">
+            <button id="prev" title="Previous"><i class="fa-solid fa-backward"></i></button>
+            <button id="play" title="Play/Pause"><i class="fa-solid fa-play"></i></button>
+            <button id="next" title="Next"><i class="fa-solid fa-forward"></i></button>
           </div>
-          <button id="playlist-toggle"><i class="fa-solid fa-list"></i></button>
+          <div class="controls-group secondary-controls">
+            <button id="shuffle" title="Shuffle"><i class="fa-solid fa-shuffle"></i></button>
+            <button id="repeat" title="Repeat"><i class="fa-solid fa-repeat"></i></button>
+            <div class="volume-control-wrapper">
+              <button id="mute"><i class="fa-solid fa-volume-up"></i></button>
+              <div class="volume-bar-container">
+                <input type="range" id="volume-bar" min="0" max="1" step="0.01" value="0.5" orient="vertical">
+              </div>
+            </div>
+            <button id="playlist-toggle"><i class="fa-solid fa-list"></i></button>
+          </div>
         </div>
       </div>
     </div>
     <div class="playlist" id="playlist">
       <!-- Playlist items will be injected here -->
     </div>
-    <audio id="audio" autoplay></audio>
+    <audio id="audio"></audio>
   </div>
   <script src="script.js"></script>
 </body>
